RESOLVED FIXED32873
[Android] ResourceHandleInternal is missing the pointer to ResourceLoaderAndroid
https://bugs.webkit.org/show_bug.cgi?id=32873
Summary [Android] ResourceHandleInternal is missing the pointer to ResourceLoaderAndroid
Andrei Popescu
Reported 2009-12-22 08:39:49 PST
On Android, ResourceHandle instances make use of a pointer to a ResourceLoaderAndroid pointer. This needs to be stored in order to later cancel the load, if necessary. Since this pointer is an internal implementation details of ResourceHandle on Android, it needs to be stored in the ResourceHandleInternal class.
Attachments
Add the the pointer to ResourceLoaderAndroid to ResourceHandleInternal class. (2.55 KB, patch)
2009-12-22 08:49 PST, Andrei Popescu
no flags
Add the the pointer to ResourceLoaderAndroid to ResourceHandleInternal class. (2.55 KB, patch)
2009-12-22 08:54 PST, Andrei Popescu
no flags
Andrei Popescu
Comment 1 2009-12-22 08:49:40 PST
Created attachment 45387 [details] Add the the pointer to ResourceLoaderAndroid to ResourceHandleInternal class.
WebKit Review Bot
Comment 2 2009-12-22 08:50:34 PST
style-queue ran check-webkit-style on attachment 45387 [details] without any errors.
Andrei Popescu
Comment 3 2009-12-22 08:54:13 PST
Created attachment 45388 [details] Add the the pointer to ResourceLoaderAndroid to ResourceHandleInternal class. Used #defined(ANDROID) instead of PLATFORM(ANDROID) in the previous patch. Fixed.
WebKit Review Bot
Comment 4 2009-12-22 08:55:57 PST
style-queue ran check-webkit-style on attachment 45388 [details] without any errors.
Dmitry Titov
Comment 5 2009-12-23 13:00:35 PST
Comment on attachment 45388 [details] Add the the pointer to ResourceLoaderAndroid to ResourceHandleInternal class. r=me
WebKit Commit Bot
Comment 6 2009-12-28 22:50:09 PST
Comment on attachment 45388 [details] Add the the pointer to ResourceLoaderAndroid to ResourceHandleInternal class. Clearing flags on attachment: 45388 Committed r52610: <http://trac.webkit.org/changeset/52610>
WebKit Commit Bot
Comment 7 2009-12-28 22:50:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.